RESOLVED FIXED88885
[Chromium] WebFrameImpl::find doesn't work for searching from a selection.
https://bugs.webkit.org/show_bug.cgi?id=88885
Summary [Chromium] WebFrameImpl::find doesn't work for searching from a selection.
Martin Kosiba
Reported 2012-06-12 10:17:36 PDT
This is related to http://code.google.com/p/chromium/issues/detail?id=129552. When a user is doing a FindInPage search it comes in as a series of WebFrameImpl::find calls (find("f"), find("fo"), find("foo")). All of the calls have the findNext option set to false. If the user additionally selected text before typing in the search term all of the find calls need to start searching at the same point. In other words a find call with !options.findNext doesn't necessarily mean that this is a new search, it could also be a refinement. The current implementation loses state (m_activeMatch is set to 0) if !options.findNext. What we really want is to preserve the active find match until the user stops interacting with the find widget.
Attachments
Patch (2.56 KB, patch)
2012-06-12 10:21 PDT, Martin Kosiba
no flags
Martin Kosiba
Comment 1 2012-06-12 10:21:21 PDT
Adam Barth
Comment 2 2012-06-13 09:10:03 PDT
Comment on attachment 147108 [details] Patch Ok.
WebKit Review Bot
Comment 3 2012-06-13 09:41:24 PDT
Comment on attachment 147108 [details] Patch Clearing flags on attachment: 147108 Committed r120219: <http://trac.webkit.org/changeset/120219>
WebKit Review Bot
Comment 4 2012-06-13 09:41:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.