[Chromium] WebFrameImpl::find doesn't work for searching from a selection. https://bugs.webkit.org/show_bug.cgi?id=88885

Patch by Martin Kosiba <mkosiba@google.com> on 2012-06-13
Reviewed by Adam Barth.

Remember the active match not just until the seatchText changes but for the entire find session.

* src/WebFrameImpl.cpp:
(WebKit::WebFrameImpl::find):
(WebKit::WebFrameImpl::setFindEndstateFocusAndSelection):

Canonical link: https://commits.webkit.org/106840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120219 268f45cc-cd09-0410-ab3c-d52691b4dbfc